--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/AppTheme">
 
         <activity android:name="com.example.celebrityquiz.MainActivity" />
+        <activity android:name="com.example.celebrityquiz.LogInActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name="com.example.celebrityquiz.SignUpActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
 
 
         <activity
