--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name="com.example.celebrityquiz.SolutionActivity"
             android:parentActivityName="com.example.celebrityquiz.MainActivity"></activity>
+        <activity
+            android:name="com.example.celebrityquiz.WordQuizActivity"
+            android:parentActivityName="com.example.celebrityquiz.MainActivity"></activity>
 
         <activity
             android:name=".SplashActivity"
