--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name="com.example.celebrityquiz.WordQuizActivity"
             android:parentActivityName="com.example.celebrityquiz.MainActivity"></activity>
+        <activity
+            android:name="com.example.celebrityquiz.WordSolutionActivity"
+            android:parentActivityName="com.example.celebrityquiz.MainActivity"></activity>
 
         <activity
             android:name=".SplashActivity"
